--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,20 @@ apscheduler
 requests
 psutil
 pyromod
+pyaes==1.6.1
+pysocks==1.7.1
+attrs>=17.3.0
+charset-normalizer<3.0,>=2.0
+multidict<7.0,>=4.5
+async-timeout<5.0,>=4.0.0a3
+yarl<2.0,>=1.0
+frozenlist>=1.1.1
+aiosignal>=1.1.2
+pymongo<5,>=4.4
+six>=1.4.0
+pytz
+tzlocal!=3.*,>=2.0
+idna<4,>=2.5
+urllib3<3,>=1.21.1
+certifi>=2017.4.17
+
